# protoweb

./: .env.example  .gitignore  CLAUDE.md  README.md  RUNNING.md  docker-compose.prod.yml  docker-compose.yml  index.html  prompt.md  test-app.mjs  test-catalog.mjs
backend/: .env  .env.example  Dockerfile  _check_users.py  _reset_admin.js  alembic.ini  package-lock.json  package.json  prototypebd.db  pyproject.toml  seed.py  server.js
backend/alembic/: env.py
backend/app/: main.py
backend/app/core/: config.py  database.py  deps.py  logging.py  permissions.py  security.py
backend/app/models/: __init__.py  blog.py  brand.py  category.py  contact.py  filament_variant.py  order.py  product.py  product_comment.py  product_image.py  product_type.py  review.py  role.py  user.py  wishlist.py
backend/app/repositories/: base.py  brand.py  category.py  filament_variant.py  order.py  product.py  product_type.py  review.py  user.py  wishlist.py
backend/app/routers/: admin.py  auth.py  blog.py  brands.py  categories.py  compare.py  contact.py  orders.py  product_comments.py  product_types.py  products.py  reviews.py  search.py  upload.py  wishlist.py
backend/app/schemas/: admin.py  auth.py  blog.py  brand.py  category.py  common.py  comparison.py  contact.py  filament_variant.py  order.py  product.py  product_comment.py  product_type.py  rbac.py  review.py  wishlist.py
backend/app/services/: admin.py  (+11 more)
backend/db/: init.js
backend/prototypebd_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_comparison.py  test_products.py
(+133 files in other folders)
